--- a/favoritter.html
+++ b/favoritter.html
@@ -62,7 +62,7 @@
 
   <!-- ✅ Produkter grid (vises som standard) -->
   <div id="tab-products" class="tab-content active">
-    <div class="favorites-grid" id="favorites-grid"></div>
+    <div class="favorites-grid" id="favorites-product-grid"></div>
     <p class="empty-message" id="empty-products" style="display:none;">
       Du har ingen favoritt-produkter enda.
     </p>
