--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     </div>
 
     <!-- Toppmeny -->
-    <nav class="top-links">
+   <nav class="top-links">
   <a href="index.html">Hjem</a>
   <a href="news.html">Nyheter</a>
   <a href="brands.html">Brands</a>
-
-  <a href="favoritter.html" class="favorites-link">
-    ⭐ Favoritter
-    <span id="favorites-count">0</span>
+  <a href="luxury.html" class="luxury-link">Luxury Corner ✨</a>
+  <a href="favoritter.html">
+    Favoritter <span id="favorites-count">0</span>
   </a>
 </nav>
+
 
 
   </div>
@@ -61,6 +61,7 @@
 
 </body>
 </html>
+
 
 
 
