--- a/news.html
+++ b/news.html
@@ -19,13 +19,16 @@
     </div>
 
     <!-- Toppmeny -->
-    <nav class="top-links">
-      <a href="index.html">Hjem</a>
-      <a href="news.html">Nyheter</a>
-      <a href="brands.html">Brands</a>
-       <a href="favoritter.html">
-  Favoritter <span id="favorites-count">0</span>
-</a>
+   <nav class="top-links">
+  <a href="index.html">Hjem</a>
+  <a href="news.html">Nyheter</a>
+  <a href="brands.html">Brands</a>
+  <a href="favoritter.html">
+    Favoritter <span id="favorites-count">0</span>
+  </a>
+     <a href="luxury.html" class="luxury-link">Luxury Corner ✨</a>
+</nav>
+
 
   </div>
 
