--- a/brand-page.html
+++ b/brand-page.html
@@ -18,12 +18,16 @@
       <button>🔍</button>
     </div>
 
-    <nav class="top-links">
-      <a href="index.html">Hjem</a>
-      <a href="news.html">Nyheter</a>
-      <a href="brands.html" class="active">Brands</a>
-      <a href="favoritter.html">Favoritter <span id="favorites-count">0</span></a>
-    </nav>
+     <!-- Toppmeny -->
+   <nav class="top-links">
+  <a href="index.html">Hjem</a>
+  <a href="news.html">Nyheter</a>
+  <a href="brands.html">Brands</a>
+  <a href="favoritter.html">
+    Favoritter <span id="favorites-count">0</span>
+  </a>
+     <a href="luxury.html" class="luxury-link">Luxury Corner ✨</a>
+</nav>
   </div>
 
   <ul class="category-bar">
