--- a/luxury.html
+++ b/luxury.html
@@ -50,6 +50,13 @@
   <div class="brand-grid" id="luxuryBrandGrid"></div>
 </section>
 
+  <!-- ✅ Luxury Products -->
+<section class="luxury-products">
+  <h3>Premium Produkter</h3>
+  <div class="luxury-grid" id="luxuryProductGrid"></div>
+</section>
+
+
 <script src="script-favorites.js"></script>
 <script src="script-luxury.js"></script>
 <script src="script.js"></script>
