--- a/luxury.html
+++ b/luxury.html
@@ -50,6 +50,12 @@
   <div class="brand-grid" id="luxuryBrandGrid"></div>
 </section>
 
+<section class="luxury-hero-section">
+  <h2 class="gold-title">Gold Picks ✨</h2>
+  <div class="luxury-hero-grid" id="luxuryGoldGrid"></div>
+</section>
+
+  
   <!-- ✅ Luxury Products -->
 <section class="luxury-products">
   <h3>Premium Produkter</h3>
