--- a/luxury.html
+++ b/luxury.html
@@ -133,6 +133,17 @@
   </defs>
 </svg>
 
+  <!-- Gull-gradient-definisjon for SVG -->
+<svg id="gold-gradient-defs" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+    <linearGradient id="goldGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+      <stop offset="0%" stop-color="#d4af37" />
+      <stop offset="50%" stop-color="#f8e08e" />
+      <stop offset="100%" stop-color="#d4af37" />
+    </linearGradient>
+  </defs>
+</svg>
+
   
 </body>
 </html>
