--- a/luxury.html
+++ b/luxury.html
@@ -18,6 +18,33 @@
       <button>🔍</button>
     </div>
 
+    <!-- =========================================
+     💎 Luxury Hero Banner (fade variant)
+========================================= -->
+<section class="luxury-hero-banner">
+  <div class="hero-slide active" style="background-image: url('https://images.unsplash.com/photo-1522312346375-d1a52e2b99b3?auto=format&fit=crop&w=1600&q=80');">
+    <div class="hero-content">
+      <h1 class="hero-title">Premium produkter fra verdens mest eksklusive merker</h1>
+      <p class="hero-subtitle">Curated luxury — selected by BrandRadar</p>
+    </div>
+  </div>
+
+  <div class="hero-slide" style="background-image: url('https://images.unsplash.com/photo-1503341455253-b2e723bb3dbb?auto=format&fit=crop&w=1600&q=80');">
+    <div class="hero-content">
+      <h1 class="hero-title">Der stil møter substans</h1>
+      <p class="hero-subtitle">Oppdag tidløs eleganse og moderne uttrykk</p>
+    </div>
+  </div>
+
+  <div class="hero-slide" style="background-image: url('https://images.unsplash.com/photo-1536184071535-78906f7172c4?auto=format&fit=crop&w=1600&q=80');">
+    <div class="hero-content">
+      <h1 class="hero-title">Merker som definerer luksus</h1>
+      <p class="hero-subtitle">Fra klassisk til cutting-edge</p>
+    </div>
+  </div>
+</section>
+
+
     <!-- Toppmeny -->
     <nav class="top-links">
       <a href="index.html">Hjem</a>
