--- a/luxury.html
+++ b/luxury.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+  
+<body class="luxury-page">
 <header class="main-header">
   <div class="nav-container">
 
