--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BrandRadar.shop</title>
+  <title>BrandRadar | Finn trendene før alle andre</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<!-- ✅ NY HEADER -->
+
+<!-- 🟦 HEADER -->
 <header class="main-header">
   <div class="nav-container">
-
     <a href="index.html" class="logo">BRANDRADAR</a>
 
     <div class="search-box">
@@ -18,22 +18,15 @@
       <button>🔍</button>
     </div>
 
-    <!-- Toppmeny -->
-   <nav class="top-links">
-  <a href="index.html">Hjem</a>
-  <a href="news.html">Nyheter</a>
-  <a href="brands.html">Brands</a>
-  <a href="favoritter.html">
-    Favoritter <span id="favorites-count">0</span>
-  </a>
-     <a href="luxury.html" class="luxury-link">Luxury Corner ✨</a>
-</nav>
-
-
-
+    <nav class="top-links">
+      <a href="index.html">Hjem</a>
+      <a href="news.html">Nyheter</a>
+      <a href="brands.html">Brands</a>
+      <a href="favoritter.html">Favoritter <span id="favorites-count">0</span></a>
+      <a href="luxury.html" class="luxury-link">Luxury Corner ✨</a>
+    </nav>
   </div>
 
-  <!-- 🔽 Kategorier som åpner megamenu -->
   <ul class="category-bar">
     <li class="category-item" data-category="Clothing">Klær</li>
     <li class="category-item" data-category="Shoes">Sko</li>
@@ -42,49 +35,87 @@
     <li class="category-item" data-category="Selfcare">Selfcare</li>
   </ul>
 </header>
-  
-<!-- ✅ Manglet – MEGA-MENYEN LASTES HER -->
+
 <nav class="mega-menu"></nav>
 
-<!-- FEATURED PRODUCTS SECTION -->
+<!-- 💎 HERO -->
+<section class="hero">
+  <div class="hero-content">
+    <h1>Oppdag trender. Følg radarene. Finn din stil.</h1>
+    <p>BrandRadar samler de mest ettertraktede produktene fra toppmerker, alt på ett sted.</p>
+    <a href="luxury.html" class="cta-btn">Utforsk Luxury Corner ✨</a>
+  </div>
+  <div class="radar-bg"></div>
+</section>
+
+<!-- 🧭 INTRO -->
+<section class="intro">
+  <h2>Hva er BrandRadar?</h2>
+  <div class="intro-points">
+    <div><h3>🔍 Vi finner</h3><p>De mest spennende trendene og produktene akkurat nå.</p></div>
+    <div><h3>🧭 Vi filtrerer</h3><p>Kun kvalitet, ingen støy. Vi håndplukker det beste.</p></div>
+    <div><h3>💡 Du oppdager</h3><p>Alt samlet på ett sted — fra klær til selfcare.</p></div>
+  </div>
+</section>
+
+<!-- 🌐 UNIVERSER -->
+<section class="universes">
+  <h2>Utforsk universet</h2>
+  <div class="universe-grid">
+    <a href="luxury.html" class="u-card luxury">Luxury Corner ✨</a>
+    <a href="news.html" class="u-card news">Trender & Nyheter</a>
+    <a href="brands.html" class="u-card brands">Brands</a>
+    <a href="favoritter.html" class="u-card favorites">Favoritter ❤️</a>
+  </div>
+</section>
+
+<!-- 🤝 PARTNER -->
+<section class="partner-highlight">
+  <div class="partner-content">
+    <img src="assets/partner-banner.jpg" alt="Partner" />
+    <div>
+      <h3>Ukens samarbeid</h3>
+      <p>Oppdag vårt eksklusive samarbeid med <strong>Zalando</strong> – håndplukkede styles og limited editions.</p>
+      <a href="news.html" class="cta-btn">Se samarbeid →</a>
+    </div>
+  </div>
+</section>
+
+<!-- 🎁 KONKURRANSE -->
+<section class="giveaway">
+  <h2>Vinn gavekort på 2000 kr!</h2>
+  <p>Meld deg på før trekning <span id="countdown">00:00:00</span></p>
+  <button class="cta-btn">Delta nå 🎉</button>
+</section>
+
+<!-- 🧭 UKENS RADAR PICKS -->
 <section class="featured-products">
-  <h2>Utvalgte produkter</h2>
-  <div class="product-grid">
+  <h2>Ukens Radar Picks</h2>
+  <p class="section-sub">Håndplukket inspirasjon – rett fra radaren vår.</p>
+  <div class="product-grid" id="featured-grid">
     <!-- Produkter lastes automatisk fra Google Sheets -->
   </div>
 </section>
 
-<script src="script-index.js"></script>
+<!-- ✉️ CTA FOOTER -->
+<footer class="footer-cta">
+  <h2>Hold deg på radaren</h2>
+  <p>Få ukens radar picks og eksklusive nyheter først.</p>
+  <div class="newsletter">
+    <input type="email" placeholder="Din e-postadresse" />
+    <button>Meld meg på</button>
+  </div>
+</footer>
+
 <script src="script.js"></script>
-  <script src="script-megamenu.js"></script>
+<script src="script-megamenu.js"></script>
 <script src="script-favorites.js"></script>
+
+<!-- Dynamisk lasting av Ukens Radar Picks -->
+<script src="script-index.js"></script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
