--- a/index.html
+++ b/index.html
@@ -38,6 +38,45 @@
 
 <nav class="mega-menu"></nav>
 
+  <!-- ============================================
+     🌟 HERO SLIDER
+============================================ -->
+<section class="hero-slider">
+  <div class="slides">
+
+    <div class="slide active" style="background-image:url('https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=1400&q=80');">
+      <div class="slide-content">
+        <h1>Oppdag sesongens trender</h1>
+        <p>Fra klassiske silhuetter til moderne favoritter.</p>
+        <a href="news.html" class="btn">Utforsk nå</a>
+      </div>
+    </div>
+
+    <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=1400&q=80');">
+      <div class="slide-content">
+        <h1>Luxury Corner ✨</h1>
+        <p>Eksklusive merker, håndplukket kvalitet.</p>
+        <a href="luxury.html" class="btn">Se utvalget</a>
+      </div>
+    </div>
+
+    <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1606813902917-0c5a3f0fdb98?auto=format&fit=crop&w=1400&q=80');">
+      <div class="slide-content">
+        <h1>Giveaways & Deals</h1>
+        <p>Vinn premier og få tilgang til eksklusive tilbud.</p>
+        <a href="news.html#deals" class="btn">Delta nå</a>
+      </div>
+    </div>
+
+  </div>
+
+  <button class="nav prev">❮</button>
+  <button class="nav next">❯</button>
+
+  <div class="dots"></div>
+</section>
+
+
 <!-- 💎 HERO -->
 <section class="hero">
   <div class="hero-content">
@@ -116,6 +155,7 @@
 
 </body>
 </html>
+
 
 
 
