--- a/index.html
+++ b/index.html
@@ -146,15 +146,14 @@
   </div>
 </footer>
 
+<script src="script-index.js"></script>
 <script src="script.js"></script>
 <script src="script-megamenu.js"></script>
 <script src="script-favorites.js"></script>
-
-<!-- Dynamisk lasting av Ukens Radar Picks -->
-<script src="script-index.js"></script>
-
+<script src="script-hero.js"></script>
 </body>
 </html>
+
 
 
 
