--- a/index.html
+++ b/index.html
@@ -87,6 +87,19 @@
   <div class="radar-bg"></div>
 </section>
 
+  <!-- ✅ Partner Banner Section -->
+<section id="partner-banner-section" class="partner-banner">
+  <div id="partner-banner-content">
+    <img id="partner-banner-img" src="" alt="Ukens samarbeid" />
+    <div class="partner-text">
+      <h3 id="partner-name"></h3>
+      <p id="partner-desc"></p>
+      <a id="partner-link" href="#" target="_blank" class="btn-primary">Se samarbeid</a>
+    </div>
+  </div>
+</section>
+
+
 <!-- 🧭 INTRO -->
 <section class="intro">
   <h2>Hva er BrandRadar?</h2>
@@ -153,6 +166,7 @@
 <script src="script-hero.js"></script>
 </body>
 </html>
+
 
 
 
