--- a/index.html
+++ b/index.html
@@ -162,10 +162,12 @@
 <script src="script-index.js"></script>
 <script src="script.js"></script>
 <script src="script-megamenu.js"></script>
+<script src="partnerBanner.js"></script>
 <script src="script-favorites.js"></script>
 <script src="script-hero.js"></script>
 </body>
 </html>
+
 
 
 
