--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <nav class="mega-menu"></nav>
 
-  <!-- ============================================
+<!-- ============================================
      🌟 HERO SLIDER
 ============================================ -->
 <section class="hero-slider">
@@ -87,7 +87,7 @@
   <div class="radar-bg"></div>
 </section>
 
-  <!-- ✅ Partner Banner Section -->
+<!-- ✅ Partner Banner Section -->
 <section id="partner-banner-section" class="partner-banner">
   <div id="partner-banner-content">
     <img id="partner-banner-img" src="" alt="Ukens samarbeid" />
@@ -144,8 +144,10 @@
 <section class="featured-products">
   <h2>Ukens Radar Picks</h2>
   <p class="section-sub">Håndplukket inspirasjon – rett fra radaren vår.</p>
-  <div class="product-grid" id="featured-grid">
-    <!-- Produkter lastes automatisk fra Google Sheets -->
+
+  <!-- ⭐️ Oppgradert Featured Grid-wrapper -->
+  <div class="product-grid premium-grid" id="featured-grid">
+    <!-- Produkter lastes inn dynamisk -->
   </div>
 </section>
 
@@ -167,6 +169,7 @@
 <script src="script-hero.js"></script>
 </body>
 </html>
+
 
 
 
