--- a/index.html
+++ b/index.html
@@ -39,43 +39,16 @@
 <nav class="mega-menu"></nav>
 
 <!-- ============================================
-     🌟 HERO SLIDER
+     🌟 HERO SLIDER (Dynamisk – tom container)
 ============================================ -->
 <section class="hero-slider">
-  <div class="slides">
-
-    <div class="slide active" style="background-image:url('https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=1400&q=80');">
-      <div class="slide-content">
-        <h1>Oppdag sesongens trender</h1>
-        <p>Fra klassiske silhuetter til moderne favoritter.</p>
-        <a href="news.html" class="btn">Utforsk nå</a>
-      </div>
-    </div>
-
-    <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=1400&q=80');">
-      <div class="slide-content">
-        <h1>Luxury Corner ✨</h1>
-        <p>Eksklusive merker, håndplukket kvalitet.</p>
-        <a href="luxury.html" class="btn">Se utvalget</a>
-      </div>
-    </div>
-
-    <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1606813902917-0c5a3f0fdb98?auto=format&fit=crop&w=1400&q=80');">
-      <div class="slide-content">
-        <h1>Giveaways & Deals</h1>
-        <p>Vinn premier og få tilgang til eksklusive tilbud.</p>
-        <a href="news.html#deals" class="btn">Delta nå</a>
-      </div>
-    </div>
-
-  </div>
+  <div class="slides"></div>
 
   <button class="nav prev">❮</button>
   <button class="nav next">❯</button>
 
   <div class="dots"></div>
 </section>
-
 
 <!-- 💎 HERO -->
 <section class="hero">
@@ -98,7 +71,6 @@
     </div>
   </div>
 </section>
-
 
 <!-- 🧭 INTRO -->
 <section class="intro">
@@ -145,10 +117,8 @@
   <h2>Ukens Radar Picks</h2>
   <p class="section-sub">Håndplukket inspirasjon – rett fra radaren vår.</p>
 
-  <!-- ⭐️ Oppgradert Featured Grid-wrapper -->
-  <div class="product-grid premium-grid" id="featured-grid">
-    <!-- Produkter lastes inn dynamisk -->
-  </div>
+  <!-- ⭐️ Oppgradert Featured Grid -->
+  <div class="product-grid premium-grid" id="featured-grid"></div>
 </section>
 
 <!-- ✉️ CTA FOOTER -->
@@ -167,8 +137,10 @@
 <script src="partnerBanner.js"></script>
 <script src="script-favorites.js"></script>
 <script src="script-hero.js"></script>
+
 </body>
 </html>
+
 
 
 
