--- a/index.html
+++ b/index.html
@@ -72,15 +72,68 @@
   </div>
 </section>
 
-<!-- 🧭 INTRO -->
+<!-- 🧭 INTRO – Premium v2 -->
 <section class="intro">
   <h2>Hva er BrandRadar?</h2>
-  <div class="intro-points">
-    <div><h3>🔍 Vi finner</h3><p>De mest spennende trendene og produktene akkurat nå.</p></div>
-    <div><h3>🧭 Vi filtrerer</h3><p>Kun kvalitet, ingen støy. Vi håndplukker det beste.</p></div>
-    <div><h3>💡 Du oppdager</h3><p>Alt samlet på ett sted — fra klær til selfcare.</p></div>
+
+  <div class="intro-grid">
+
+    <!-- CARD 1 -->
+    <div class="intro-card">
+      <div class="icon">
+        <!-- Search Icon (Lucide) -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" 
+            viewBox="0 0 24 24" fill="none" stroke="currentColor" 
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="11" cy="11" r="8"></circle>
+          <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+        </svg>
+      </div>
+      <h3>Vi finner</h3>
+      <p>De mest spennende trendene og produktene akkurat nå.</p>
+    </div>
+
+    <!-- CARD 2 -->
+    <div class="intro-card">
+      <div class="icon">
+        <!-- Sliders Icon (Lucide) -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
+            viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <line x1="4" y1="21" x2="4" y2="14"></line>
+          <line x1="4" y1="10" x2="4" y2="3"></line>
+          <line x1="12" y1="21" x2="12" y2="12"></line>
+          <line x1="12" y1="8" x2="12" y2="3"></line>
+          <line x1="20" y1="21" x2="20" y2="16"></line>
+          <line x1="20" y1="12" x2="20" y2="3"></line>
+          <line x1="1" y1="14" x2="7" y2="14"></line>
+          <line x1="9" y1="8" x2="15" y2="8"></line>
+          <line x1="17" y1="16" x2="23" y2="16"></line>
+        </svg>
+      </div>
+      <h3>Vi filtrerer</h3>
+      <p>Kvalitet uten støy. Vi håndplukker det beste.</p>
+    </div>
+
+    <!-- CARD 3 -->
+    <div class="intro-card">
+      <div class="icon">
+        <!-- Lightbulb Icon (Lucide) -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
+            viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M9 18h6"></path>
+          <path d="M10 22h4"></path>
+          <path d="M12 2a7 7 0 0 0-7 7c0 2.76 1.5 5.19 3.75 6.32a2.46 2.46 0 0 1 1.25 2.1V18h6v-.58c0-.88.5-1.69 1.25-2.1C17.5 14.19 19 11.76 19 9a7 7 0 0 0-7-7z"></path>
+        </svg>
+      </div>
+      <h3>Du oppdager</h3>
+      <p>Alt samlet på ett sted — fra klær til selfcare.</p>
+    </div>
+
   </div>
 </section>
+
 
 <!-- 🌐 UNIVERSER -->
 <section class="universes">
@@ -140,6 +193,7 @@
 
 </body>
 </html>
+
 
 
 
