--- a/index.html
+++ b/index.html
@@ -137,14 +137,52 @@
 
 <!-- 🌐 UNIVERSER -->
 <section class="universes">
-  <h2>Utforsk universet</h2>
-  <div class="universe-grid">
-    <a href="luxury.html" class="u-card luxury">Luxury Corner ✨</a>
-    <a href="news.html" class="u-card news">Trender & Nyheter</a>
-    <a href="brands.html" class="u-card brands">Brands</a>
-    <a href="favoritter.html" class="u-card favorites">Favoritter ❤️</a>
+  <div class="container">
+    <h2>Utforsk BrandRadar-universet</h2>
+    <p class="universes-sub">
+      Velg hvor du vil starte reisen – dypdykk i luksus, trender, brands eller rene produktsøk.
+    </p>
+
+    <div class="universe-grid">
+      <!-- 1. Luxury -->
+      <a href="luxury.html" class="u-card">
+        <h3>Luxury Corner</h3>
+        <p>Eksklusive merker, håndplukkede premium-plagg og produkter i øverste sjikt.</p>
+      </a>
+
+      <!-- 2. Trender & Nyheter -->
+      <a href="news.html" class="u-card">
+        <h3>Trender & Nyheter</h3>
+        <p>Hold deg oppdatert på radaren – nye drops, kolleksjoner og kampanjer.</p>
+      </a>
+
+      <!-- 3. Brands -->
+      <a href="brands.html" class="u-card">
+        <h3>Brands</h3>
+        <p>Utforsk merkeuniverset, finn favorittbrandene dine og oppdag nye navn.</p>
+      </a>
+
+      <!-- 4. Produkter -->
+      <a href="category.html" class="u-card">
+        <h3>Produkter</h3>
+        <p>Browse på tvers av kategorier – klær, sko, gym, tilbehør og selfcare.</p>
+      </a>
+
+      <!-- 5. Deals & Kampanjer -->
+      <a href="news.html#deals" class="u-card">
+        <h3>Deals & Kampanjer</h3>
+        <p>Se ukens beste tilbud og kampanjer før alle andre.</p>
+      </a>
+
+      <!-- 6. Bestselgere / Trending -->
+      <a href="news.html#picks" class="u-card">
+        <h3>Bestselgere & Trending</h3>
+        <p>Oppdag det som går igjen på radaren – produkter alle klikker på nå.</p>
+      </a>
+    </div>
   </div>
 </section>
+
 
 <!-- 🤝 PARTNER -->
 <section class="partner-highlight">
@@ -193,6 +231,7 @@
 
 </body>
 </html>
+
 
 
 
