--- a/index.html
+++ b/index.html
@@ -135,53 +135,40 @@
 </section>
 
 
-<!-- 🌐 UNIVERSER -->
+<!-- 🌐 UTFORSK BRANDRADAR-UNIVERSET -->
 <section class="universes">
-  <div class="container">
-    <h2>Utforsk BrandRadar-universet</h2>
-    <p class="universes-sub">
-      Velg hvor du vil starte reisen – dypdykk i luksus, trender, brands eller rene produktsøk.
-    </p>
+  <h2>Utforsk BrandRadar-universet</h2>
+  <p class="universes-sub">Velg hvor du vil starte reisen – dypdykk i luksus, trender, brands eller kategorier.</p>
 
-    <div class="universe-grid">
-      <!-- 1. Luxury -->
-      <a href="luxury.html" class="u-card">
-        <h3>Luxury Corner</h3>
-        <p>Eksklusive merker, håndplukkede premium-plagg og produkter i øverste sjikt.</p>
-      </a>
+  <div class="universe-grid">
 
-      <!-- 2. Trender & Nyheter -->
-      <a href="news.html" class="u-card">
-        <h3>Trender & Nyheter</h3>
-        <p>Hold deg oppdatert på radaren – nye drops, kolleksjoner og kampanjer.</p>
-      </a>
+    <!-- Luxury -->
+    <a href="luxury.html" class="u-card">
+      <h3>Luxury Corner ✨</h3>
+      <p>Eksklusive merker og håndplukkede premium-produkter i øverste sjikt.</p>
+    </a>
 
-      <!-- 3. Brands -->
-      <a href="brands.html" class="u-card">
-        <h3>Brands</h3>
-        <p>Utforsk merkeuniverset, finn favorittbrandene dine og oppdag nye navn.</p>
-      </a>
+    <!-- Nyheter + Deals -->
+    <a href="news.html" class="u-card">
+      <h3>Trender, Nyheter & Kampanjer</h3>
+      <p>Oppdag nye drops, sesongens trender, kampanjer og eksklusive deals.</p>
+    </a>
 
-      <!-- 4. Produkter -->
-      <a href="category.html" class="u-card">
-        <h3>Produkter</h3>
-        <p>Browse på tvers av kategorier – klær, sko, gym, tilbehør og selfcare.</p>
-      </a>
+    <!-- Brands -->
+    <a href="brands.html" class="u-card">
+      <h3>Brands</h3>
+      <p>Utforsk merkeuniverset, finn favorittbrandene dine og oppdag nye navn.</p>
+    </a>
 
-      <!-- 5. Deals & Kampanjer -->
-      <a href="news.html#deals" class="u-card">
-        <h3>Deals & Kampanjer</h3>
-        <p>Se ukens beste tilbud og kampanjer før alle andre.</p>
-      </a>
+    <!-- Produkter -->
+    <a href="category.html" class="u-card">
+      <h3>Produkter</h3>
+      <p>Browse på tvers av kategorier – klær, sko, gym, tilbehør og selfcare.</p>
+    </a>
 
-      <!-- 6. Bestselgere / Trending -->
-      <a href="news.html#picks" class="u-card">
-        <h3>Bestselgere & Trending</h3>
-        <p>Oppdag det som går igjen på radaren – produkter alle klikker på nå.</p>
-      </a>
-    </div>
   </div>
 </section>
+
 
 
 <!-- 🤝 PARTNER -->
@@ -231,6 +218,7 @@
 
 </body>
 </html>
+
 
 
 
