--- a/index.html
+++ b/index.html
@@ -138,34 +138,28 @@
 <!-- 🌐 UTFORSK BRANDRADAR-UNIVERSET -->
 <section class="universes">
   <h2>Utforsk BrandRadar-universet</h2>
-  <p class="universes-sub">Velg hvor du vil starte reisen – dypdykk i luksus, trender, brands eller kategorier.</p>
+  <p class="section-sub">Velg hvor du vil starte reisen – dyppdykk i luksus, trender, brands eller kategorier.</p>
 
   <div class="universe-grid">
-
-    <!-- Luxury -->
     <a href="luxury.html" class="u-card">
-      <h3>Luxury Corner ✨</h3>
+      <h3>Luxury Corner</h3>
       <p>Eksklusive merker og håndplukkede premium-produkter i øverste sjikt.</p>
     </a>
 
-    <!-- Nyheter + Deals -->
     <a href="news.html" class="u-card">
       <h3>Trender, Nyheter & Kampanjer</h3>
-      <p>Oppdag nye drops, sesongens trender, kampanjer og eksklusive deals.</p>
+      <p>Oppdag nye drops, sesongtrender, eksklusive deals og kampanjer.</p>
     </a>
 
-    <!-- Brands -->
     <a href="brands.html" class="u-card">
       <h3>Brands</h3>
       <p>Utforsk merkeuniverset, finn favorittbrandene dine og oppdag nye navn.</p>
     </a>
 
-    <!-- Produkter -->
     <a href="category.html" class="u-card">
       <h3>Produkter</h3>
-      <p>Browse på tvers av kategorier – klær, sko, gym, tilbehør og selfcare.</p>
+      <p>Bla gjennom klær, sko, gym, selfcare og tilbehør – alt samlet.</p>
     </a>
-
   </div>
 </section>
 
@@ -218,6 +212,7 @@
 
 </body>
 </html>
+
 
 
 
