--- a/index.html
+++ b/index.html
@@ -141,25 +141,27 @@
   <p class="section-sub">Velg hvor du vil starte reisen – dyppdykk i luksus, trender, brands eller kategorier.</p>
 
   <div class="universe-grid">
-    <a href="luxury.html" class="u-card">
-      <h3>Luxury Corner</h3>
+
+    <a href="luxury.html" class="u-card luxury">
+      <h3>Luxury Corner ✨</h3>
       <p>Eksklusive merker og håndplukkede premium-produkter i øverste sjikt.</p>
     </a>
 
-    <a href="news.html" class="u-card">
+    <a href="news.html" class="u-card trends">
       <h3>Trender, Nyheter & Kampanjer</h3>
       <p>Oppdag nye drops, sesongtrender, eksklusive deals og kampanjer.</p>
     </a>
 
-    <a href="brands.html" class="u-card">
+    <a href="brands.html" class="u-card brands">
       <h3>Brands</h3>
       <p>Utforsk merkeuniverset, finn favorittbrandene dine og oppdag nye navn.</p>
     </a>
 
-    <a href="category.html" class="u-card">
+    <a href="category.html" class="u-card products">
       <h3>Produkter</h3>
       <p>Bla gjennom klær, sko, gym, selfcare og tilbehør – alt samlet.</p>
     </a>
+
   </div>
 </section>
 
@@ -212,6 +214,7 @@
 
 </body>
 </html>
+
 
 
 
