--- a/index.html
+++ b/index.html
@@ -165,19 +165,15 @@
   </div>
 </section>
 
+  
+<!-- ⭐ TOP TRENDING RIGHT NOW -->
+<section class="trending-now">
+  <h2>Top Trending Right Now</h2>
+  <p class="section-sub">Produktene som beveger radaren akkurat nå.</p>
 
-
-<!-- 🤝 PARTNER -->
-<section class="partner-highlight">
-  <div class="partner-content">
-    <img src="assets/partner-banner.jpg" alt="Partner" />
-    <div>
-      <h3>Ukens samarbeid</h3>
-      <p>Oppdag vårt eksklusive samarbeid med <strong>Zalando</strong> – håndplukkede styles og limited editions.</p>
-      <a href="news.html" class="cta-btn">Se samarbeid →</a>
-    </div>
-  </div>
+  <div class="trending-grid" id="trending-grid"></div>
 </section>
+
 
 <!-- 🎁 KONKURRANSE -->
 <section class="giveaway">
@@ -214,6 +210,7 @@
 
 </body>
 </html>
+
 
 
 
