--- a/index.html
+++ b/index.html
@@ -175,6 +175,16 @@
 </section>
 
 
+<!-- 🌟 TOP BRANDS THIS WEEK -->
+<section class="top-brands">
+  <h2>Top Brands This Week</h2>
+  <p class="section-sub">Merker som trender på radaren akkurat nå.</p>
+
+  <div class="brands-grid" id="brands-grid"></div>
+</section>
+
+
+
 <!-- 🎁 KONKURRANSE -->
 <section class="giveaway">
   <h2>Vinn gavekort på 2000 kr!</h2>
@@ -210,6 +220,7 @@
 
 </body>
 </html>
+
 
 
 
