--- a/index.html
+++ b/index.html
@@ -166,13 +166,16 @@
 </section>
 
   
-<!-- ⭐ TOP TRENDING RIGHT NOW -->
-<section class="trending-now">
-  <h2>Top Trending Right Now</h2>
-  <p class="section-sub">Produktene som beveger radaren akkurat nå.</p>
+<!-- 🌟 TRENDING RIGHT NOW -->
+<section class="trending-section">
+  <h2>Trending Right Now</h2>
+  <p class="section-sub">Det som beveger seg mest akkurat nå på radaren</p>
 
-  <div class="trending-grid" id="trending-grid"></div>
+  <div id="trending-grid" class="trending-grid">
+    <!-- Dynamisk innhold -->
+  </div>
 </section>
+
 
 
 <!-- 🌟 TOP BRANDS THIS WEEK -->
@@ -220,6 +223,7 @@
 
 </body>
 </html>
+
 
 
 
