--- a/index.html
+++ b/index.html
@@ -176,16 +176,13 @@
   </div>
 </section>
 
-
-
 <!-- 🌟 TOP BRANDS THIS WEEK -->
 <section class="top-brands">
   <h2>Top Brands This Week</h2>
   <p class="section-sub">Merker som trender på radaren akkurat nå.</p>
 
-  <div class="brands-grid" id="brands-grid"></div>
+  <div class="brands-grid" id="topbrands-grid"></div>
 </section>
-
 
 
 <!-- 🎁 KONKURRANSE -->
@@ -223,6 +220,7 @@
 
 </body>
 </html>
+
 
 
 
