--- a/index.html
+++ b/index.html
@@ -171,10 +171,11 @@
   <h2>Trending Right Now</h2>
   <p class="section-sub">Det som beveger seg mest akkurat nå på radaren</p>
 
-  <div id="trending-grid" class="trending-grid">
+  <div id="trending-grid" class="product-grid premium-grid">
     <!-- Dynamisk innhold -->
   </div>
 </section>
+
 
 <!-- 🌟 TOP BRANDS THIS WEEK -->
 <section class="top-brands">
@@ -220,6 +221,7 @@
 
 </body>
 </html>
+
 
 
 
