--- a/index.html
+++ b/index.html
@@ -168,13 +168,29 @@
   
 <!-- 🌟 TRENDING RIGHT NOW -->
 <section class="trending-section">
-  <h2>Trending Right Now</h2>
-  <p class="section-sub">Det som beveger seg mest akkurat nå på radaren</p>
+  <div class="trending-header">
+    <h2>Trending Right Now</h2>
+    <p class="section-sub">Det som beveger seg mest akkurat nå på radaren</p>
+  </div>
 
-  <div id="trending-grid" class="product-grid premium-grid">
-    <!-- Dynamisk innhold -->
+  <div class="trending-slider">
+    <!-- Venstre pil -->
+    <button class="trending-arrow trending-arrow-left" id="trendingPrev" aria-label="Forrige">
+      ‹
+    </button>
+
+    <!-- Selve slider-sporet -->
+    <div class="trending-now-container" id="trendingTrack">
+      <!-- Kortene fylles dynamisk fra JS -->
+    </div>
+
+    <!-- Høyre pil -->
+    <button class="trending-arrow trending-arrow-right" id="trendingNext" aria-label="Neste">
+      ›
+    </button>
   </div>
 </section>
+
 
 
 <!-- 🌟 TOP BRANDS THIS WEEK -->
@@ -221,6 +237,7 @@
 
 </body>
 </html>
+
 
 
 
