--- a/index.html
+++ b/index.html
@@ -165,29 +165,13 @@
   </div>
 </section>
 
-  
-<!-- 🌟 TRENDING RIGHT NOW -->
+  <!-- 🌟 TRENDING RIGHT NOW -->
 <section class="trending-section">
-  <div class="trending-header">
-    <h2>Trending Right Now</h2>
-    <p class="section-sub">Det som beveger seg mest akkurat nå på radaren</p>
-  </div>
+  <h2>Trending Right Now</h2>
+  <p class="section-sub">Det som beveger seg mest akkurat nå på radaren</p>
 
-  <div class="trending-slider">
-    <!-- Venstre pil -->
-    <button class="trending-arrow trending-arrow-left" id="trendingPrev" aria-label="Forrige">
-      ‹
-    </button>
-
-    <!-- Selve slider-sporet -->
-    <div class="trending-now-container" id="trendingTrack">
-      <!-- Kortene fylles dynamisk fra JS -->
-    </div>
-
-    <!-- Høyre pil -->
-    <button class="trending-arrow trending-arrow-right" id="trendingNext" aria-label="Neste">
-      ›
-    </button>
+  <div id="trending-grid" class="product-grid premium-grid">
+    <!-- Dynamisk innhold -->
   </div>
 </section>
 
@@ -237,6 +221,7 @@
 
 </body>
 </html>
+
 
 
 
