--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <h2>Trending Right Now</h2>
   <p class="section-sub">Det som beveger seg mest akkurat nå på radaren</p>
 
-  <div id="trending-grid" class="product-grid premium-grid">
+  <div id="trending-grid" class="trending-grid">
     <!-- Dynamisk innhold -->
   </div>
 </section>
@@ -221,6 +221,7 @@
 
 </body>
 </html>
+
 
 
 
