--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@
   <h2>Trending Right Now</h2>
   <p class="section-sub">Det som beveger seg mest akkurat nå på radaren</p>
 
-  <div id="trending-grid" class="trending-grid">
+  <button id="trendingPrev" class="trending-nav prev">❮</button>
+  <button id="trendingNext" class="trending-nav next">❯</button>
+
+  <div id="trending-grid" class="trending-track">
     <!-- Dynamisk innhold -->
   </div>
 </section>
@@ -221,6 +224,7 @@
 
 </body>
 </html>
+
 
 
 
