--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <button id="trendingPrev" class="trending-nav prev">❮</button>
   <button id="trendingNext" class="trending-nav next">❯</button>
 
-  <div id="trending-grid" class="trending-track">
+  <div id="trending-grid" class="trending-grid"></div>
     <!-- Dynamisk innhold -->
   </div>
 </section>
@@ -224,6 +224,7 @@
 
 </body>
 </html>
+
 
 
 
