--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
   </div>
 </footer>
 
+<script src="favorites-core.js"></script>
 <script src="script-index.js"></script>
 <script src="script.js"></script>
 <script src="script-megamenu.js"></script>
@@ -224,6 +225,7 @@
 
 </body>
 </html>
+
 
 
 
