--- a/luxury.html
+++ b/luxury.html
@@ -135,7 +135,7 @@
 
 </main>
 
-
+<script src="favorites-core.js"></script>
 <script src="script-favorites.js"></script>
 <script src="script-luxury.js"></script>
 <script src="script.js"></script>
