--- a/news.html
+++ b/news.html
@@ -78,6 +78,7 @@
   <!-- 📜 FOOTER (valgfritt) -->
 
   <!-- 🧠 Scripts -->
+  <script src="favorites-core.js"></script>
   <script src="script.js"></script>
   <script src="script-megamenu.js"></script>
   <script src="partnerBanner.js"></script>
