--- a/product.html
+++ b/product.html
@@ -91,6 +91,7 @@
   </div>
 </section>
 
+<script src="favorites-core.js"></script>
 <script src="script.js"></script>
 <script src="script-megamenu.js"></script>
 <script src="script-favorites.js"></script>
