--- a/favoritter.html
+++ b/favoritter.html
@@ -77,6 +77,8 @@
   </div>
 </section>
 
+
+  <script src="favorites-core.js"></script>
   <script src="script-favorites.js"></script>
   <script src="script.js"></script>
   <script src="script-megamenu.js"></script>
