--- a/category.html
+++ b/category.html
@@ -99,6 +99,8 @@
   </p>
 </section>
 
+
+<script src="favorites-core.js"></script>
 <script src="script-favorites.js"></script>
 <script src="script.js"></script>
 <script src="script-megamenu.js"></script>
