--- a/brands.html
+++ b/brands.html
@@ -96,6 +96,8 @@
     <div class="brand-grid" id="brand-grid"></div>
   </section>
 
+
+<script src="favorites-core.js"></script>
 <script src="script-favorites.js"></script>
 <script src="script-brands.js"></script>
 <script src="script.js"></script>
