--- a/brand-page.html
+++ b/brand-page.html
@@ -83,6 +83,8 @@
   <p class="empty-message" style="display:none;">Ingen produkter funnet</p>
 </section>
 
+
+<script src="favorites-core.js"></script>
 <script src="script-favorites.js"></script>
 <script src="script.js"></script>
 <script src="script-megamenu.js"></script>
