--- a/news.html
+++ b/news.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <!-- ✅ NY HEADER -->
+
+<!-- ==========================================
+     HEADER
+========================================== -->
 <header class="main-header">
   <div class="nav-container">
 
@@ -18,21 +21,16 @@
       <button>🔍</button>
     </div>
 
-    <!-- Toppmeny -->
-   <nav class="top-links">
-  <a href="index.html">Hjem</a>
-  <a href="news.html">Nyheter</a>
-  <a href="brands.html">Brands</a>
-  <a href="favoritter.html">
-    Favoritter <span id="favorites-count">0</span>
-  </a>
-     <a href="luxury.html" class="luxury-link">Luxury Corner ✨</a>
-</nav>
-
+    <nav class="top-links">
+      <a href="index.html">Hjem</a>
+      <a href="news.html">Nyheter</a>
+      <a href="brands.html">Brands</a>
+      <a href="favoritter.html">Favoritter <span id="favorites-count">0</span></a>
+      <a href="luxury.html" class="luxury-link">Luxury Corner ✨</a>
+    </nav>
 
   </div>
 
-  <!-- 🔽 Kategorier som åpner megamenu -->
   <ul class="category-bar">
     <li class="category-item" data-category="Clothing">Klær</li>
     <li class="category-item" data-category="Shoes">Sko</li>
@@ -42,51 +40,56 @@
   </ul>
 </header>
 
-  <!-- ✅ Manglet – MEGA-MENYEN LASTES HER -->
 <nav class="mega-menu"></nav>
 
-  <!-- 🔽 MAIN INNHOLD -->
-  <main class="news-page">
-    <!-- 🧩 1. Partner Banner -->
-    <section class="partner-banner section-padding"></section>
+<!-- ==========================================
+     MAIN CONTENT
+========================================== -->
+<main class="news-page">
 
-    <!-- 🔥 2. Ukens Deals -->
-    <section id="deals-section" class="section-padding">
-      <h2>Ukens Deals 🔥</h2>
-      <div class="deals-grid loading">Laster deals...</div>
-    </section>
+  <!-- 1) PARTNER BANNER -->
+  <section id="partner-banner" class="section-padding"></section>
 
-    <!-- 🛰️ 3. Radar Picks -->
-    <section id="picks-section" class="section-padding">
-      <h2>Radar Picks 🛰️</h2>
-      <div class="picks-grid loading">Laster picks...</div>
-    </section>
+  <!-- 2) UKENS DEALS -->
+  <section class="section-padding">
+    <h2>Ukens Deals 🔥</h2>
+    <div id="deals-grid" class="news-grid loading">Laster deals...</div>
+  </section>
 
-    <!-- ✨ 4. Ukens Spotlight -->
-    <section id="featured-news" class="section-padding">
-      <h2>Ukens Spotlight ✨</h2>
-      <div class="featured-wrapper loading">Laster spotlight...</div>
-    </section>
+  <!-- 3) RADAR PICKS -->
+  <section class="section-padding">
+    <h2>Radar Picks 🛰️</h2>
+    <div id="radar-picks-grid" class="news-grid loading">Laster picks...</div>
+  </section>
 
-    <!-- 🆕 5. Nye Produkter / Trender -->
-    <section id="news-feed" class="section-padding">
-      <h2>Nye Produkter & Trender</h2>
-      <div id="news-grid" class="news-grid loading">Laster produkter...</div>
-    </section>
-  </main>
+  <!-- 4) SPOTLIGHT -->
+  <section class="section-padding">
+    <div id="featured-news" class="featured-wrapper loading">Laster spotlight...</div>
+  </section>
 
-  <!-- 📜 FOOTER (valgfritt) -->
+  <!-- 5) NYHETSFLOW -->
+  <section class="section-padding">
+    <h2>Nye Produkter & Trender</h2>
+    <div id="news-grid" class="news-grid loading">Laster produkter...</div>
+  </section>
 
-  <!-- 🧠 Scripts -->
-  <script src="favorites-core.js"></script>
-  <script src="script.js"></script>
-  <script src="script-megamenu.js"></script>
-  <script src="partnerBanner.js"></script>
-  <script src="deals.js"></script>
-  <script src="picks.js"></script>
-  <script src="news.js"></script>
-  <script src="script-favorites.js"></script>
+</main>
+
+<!-- ==========================================
+     SCRIPTS (KORREKT REKKEFØLGE)
+========================================== -->
+<script src="favorites-core.js"></script>
+<script src="script.js"></script>
+<script src="script-megamenu.js"></script>
+
+<!-- Hele news-logikken ligger nå i ÉN fil -->
+<script src="news.js"></script>
+
+<!-- Til slutt favorites-rendering -->
+<script src="script-favorites.js"></script>
+
 </body>
 </html>
+
 
 
