--- a/luxury.html
+++ b/luxury.html
@@ -77,10 +77,10 @@
 <!-- ============================= -->
 <main class="luxury-page">
 
-  <section class="luxury-hero">
-    <h1>Luksus håndplukket for deg.</h1>
-    <p>Premium produkter fra verdens mest eksklusive merker</p>
-  </section>
+  <section class="luxury-hero-banner">
+  <h1 class="luxury-hero-title">Luksus håndplukket for deg.</h1>
+  <p class="luxury-hero-subtitle">Premium produkter fra verdens mest eksklusive merker</p>
+</section>
 
 
   <!-- ============================= -->
